Meta data, hierarchy of modules

--- a/first-project/src/app/app.component.html
+++ b/first-project/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>Primeiro App angular</h1>
 <first-component></first-component>
 <app-first-component-ng></app-first-component-ng>
+<app-cursos></app-cursos>
