Introduction on Services

--- a/first-project/src/app/modulo-funcionalidade-cursos/cursos.component.html
+++ b/first-project/src/app/modulo-funcionalidade-cursos/cursos.component.html
@@ -1,2 +1,5 @@
-<p>cursos works!</p>
+<p>Name of couse <a href="www.google.com.br">{{nomePortal}}</a></p>
+<ul>
+    <li *ngFor="let item of cursos">{{item}}</li>
+</ul>
 <app-cursos-private></app-cursos-private>
