Two way databiding

--- a/second-project/data-biding/src/app/app.component.html
+++ b/second-project/data-biding/src/app/app.component.html
@@ -5,3 +5,11 @@
 <app-stylebiding></app-stylebiding>
 <br><br>
 <app-eventbiding></app-eventbiding>
+<br>
+<br>
+<br>
+<article>Two way Databiding</article>
+<app-two-away-databiding></app-two-away-databiding>
+<br>
+<h1>Input Properties</h1>
+<br>
