Input Properties learning

--- a/second-project/data-biding/src/app/databiding/databiding.component.html
+++ b/second-project/data-biding/src/app/databiding/databiding.component.html
@@ -5,3 +5,4 @@
 <h1>
     This is a url using interpolation <a href="{{ url }}">Google</a>
 </h1>
+<app-input-properties [foreigner]="name"></app-input-properties>
