Output properties experimentation

--- a/second-project/data-biding/src/app/app.component.html
+++ b/second-project/data-biding/src/app/app.component.html
@@ -13,3 +13,5 @@
 <br>
 <h1>Input Properties</h1>
 <br>
+<app-output-properties [countMe]="10"
+                        (mudarValor)="onEmmit($event)"></app-output-properties>
