--- a/third-project/src/app/app.component.html
+++ b/third-project/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>Third Project</h1>
-<app-diretiva-ngif></app-diretiva-ngif>
+<!-- <app-diretiva-ngif></app-diretiva-ngif>
 <app-diretiva-ngswitch [profileConfig]="'master'"></app-diretiva-ngswitch>
+<app-diretiva-atributo></app-diretiva-atributo> -->
