--- a/third-project/src/app/app.component.html
+++ b/third-project/src/app/app.component.html
@@ -2,3 +2,4 @@
 <!-- <app-diretiva-ngif></app-diretiva-ngif>
 <app-diretiva-ngswitch [profileConfig]="'master'"></app-diretiva-ngswitch>
 <app-diretiva-atributo></app-diretiva-atributo> -->
+<app-diretiva-ngstyle></app-diretiva-ngstyle>
