--- a/third-project/src/app/app.component.html
+++ b/third-project/src/app/app.component.html
@@ -3,4 +3,13 @@
 <app-diretiva-ngswitch [profileConfig]="'master'"></app-diretiva-ngswitch>
 <app-diretiva-atributo></app-diretiva-atributo> -->
 <!-- <app-diretiva-ngstyle></app-diretiva-ngstyle> -->
-<app-elvis-operator></app-elvis-operator>
+<!-- <app-elvis-operator></app-elvis-operator> -->
+<app-ng-content>
+    <div tittle>Testing</div>
+    <div body>I'm sexy</div>
+</app-ng-content>
+
+<app-ng-content>
+    <div class="tittle">Testing</div>
+    <div class= "body">I'm sexy</div>
+</app-ng-content>
