Finishing using ElementRef and Rederer

--- a/third-project/src/app/app.component.html
+++ b/third-project/src/app/app.component.html
@@ -4,7 +4,7 @@
 <app-diretiva-atributo></app-diretiva-atributo> -->
 <!-- <app-diretiva-ngstyle></app-diretiva-ngstyle> -->
 <!-- <app-elvis-operator></app-elvis-operator> -->
-<app-ng-content>
+<!-- <app-ng-content>
     <div tittle>Testing</div>
     <div body>I'm sexy</div>
 </app-ng-content>
@@ -12,4 +12,5 @@
 <app-ng-content>
     <div class="tittle">Testing</div>
     <div class= "body">I'm sexy</div>
-</app-ng-content>
+</app-ng-content> -->
+<app-custom-directives></app-custom-directives>
