Fascinating HostBiding introduction

--- a/third-project/src/app/custom-directives/custom-directives.component.html
+++ b/third-project/src/app/custom-directives/custom-directives.component.html
@@ -1,2 +1,3 @@
 <p yelowBackground>custom-directives works!</p>
 <button mat-raised-button yelowBackground>This is a button</button>
+<p highlightMouse> Please highlight me!</p>
