--- a/sixth-projects/src/app/app.component.html
+++ b/sixth-projects/src/app/app.component.html
@@ -1,1 +1,9 @@
+<mat-toolbar color="primary" class="navbar">
+    <button mat-flat-button color="primary" routerLink="" >Rotas angular</button >
+    <div>
+        <button mat-flat-button color="primary" routerLink="/login" >Login</button >
+        <button mat-flat-button color="primary" routerLink="/cursos" >Courses</button >
+    </div>
+</mat-toolbar>
+
 <router-outlet></router-outlet>
