--- a/sixth-projects/src/app/app.component.html
+++ b/sixth-projects/src/app/app.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary" class="navbar">
-    <button mat-flat-button color="primary" routerLink="" >Rotas angular</button >
+    <button mat-flat-button color="primary" routerLink=""  >Rotas angular</button >
     <div>
-        <button mat-flat-button color="primary" routerLink="/login" >Login</button >
-        <button mat-flat-button color="primary" routerLink="/cursos" >Courses</button >
+        <button mat-flat-button color="primary" routerLink="/login" routerLinkActive="active" >Login</button >
+        <button mat-flat-button color="primary" routerLink="/cursos" routerLinkActive="active">Courses</button >
     </div>
 </mat-toolbar>
 
