Refactoring and creating new components

--- a/sixth-projects/src/app/app.component.html
+++ b/sixth-projects/src/app/app.component.html
@@ -4,6 +4,7 @@
         <button mat-flat-button color="primary" routerLink="/login" routerLinkActive="active" >Login</button >
         <button mat-flat-button color="primary" routerLink="/cursos" routerLinkActive="active" [queryParams]="{pagina:1}">Courses</button >
         <button mat-flat-button color="primary" [routerLink]="['/curso',inputId.value]"  routerLinkActive="active">Courses Detail</button >
+        <button mat-flat-button color="primary" [routerLink]="['/studants']"  routerLinkActive="active">Studants</button >
     </div>
 </mat-toolbar>
     <div class="container">
